# vllm-hust-benchmark

./: .gitignore  CHANGELOG.md  README.md  agent.md  pyproject.toml
docs/: ASCEND_L1_PR_SMOKE_BENCHMARK_PLAN.md  HISTORICAL_PR_BACKFILL.md  LEADERBOARD_ALIGNMENT.md  LEADERBOARD_BENCHMARK_REQUIREMENT_TEMPLATE.md  LEADERBOARD_BENCHMARK_SCENARIOS.md  LEADERBOARD_HANDOFF.md  LEADERBOARD_MODEL_IDENTITY_MIGRATION_CHECKLIST.md  LEADERBOARD_MODEL_IDENTITY_NORMALIZATION.md  UPSTREAM_ANALYSIS.md  benchmark优化方案  historical-pr-backfill-plan.sample.json  official-baseline-backfill-20260702.md
leaderboard-data/: README.md
scripts/: backfill_historical_pr_benchmarks.py  convert_trace_to_workload.py  evoscientist_trace_handler.py  patch-vllm-ascend-sampler.sh  prepare-official-ascend-baseline-env.sh  run-ascend-context-length-current-vs-official.sh  run-current-ascend-same-spec-matrix.sh  run-current-ascend-same-spec-msprof.env  run-current-ascend-same-spec-msprof.sh  run-current-ascend-same-spec.sh  run-official-ascend-goal-baseline-matrix.sh  run-official-ascend-goal-baseline.sh  run-official-v0180-baselines.sh  run_evoscientist_trace.py  run_org_member_benchmarks.py  run_vllm_benchmark.py  run_vllm_cli_compat.py  setup-official-v0180-baseline.sh  validate_public_leaderboard_snapshots.py
tests/: test_cli.py  test_context_length_current_vs_official_script.py  test_current_same_spec_script.py  test_historical_pr_backfill.py  test_integration.py  test_model_registry.py  test_official_baseline_matrix_script.py  test_official_baselines.py  test_official_runtime_inputs.py  (+10 more)
(+461 files in other folders)
